Closed Bug 1727285 Opened 4 years ago Closed 4 years ago

[Wayland] Don't crash when gtk_clipboard_request_text() callback returns null text string

Categories

(Core :: Widget: Gtk, defect, P3)

defect

Tracking

()

RESOLVED FIXED
93 Branch
Tracking Status
firefox93 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

Details

Attachments

(2 files)

When gtk_clipboard_request_text() is called with missing string type in clipboard, a callback is called with null text argument so don't get length of it.a

Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: