Bug 1727285 [Wayland] Don't crash when gtk_clipboard_request_text() callback returns null text string, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D123434